# internal/domain/jwt/requests.go
@@ -1,1 +1,6 @@
 package jwtModel
+
+type JWTTokenRequest struct {
+	Token    string `json:"token" binding:"required"`
+	Username string `json:"username" binding:"required"`
+}
