# internal/domain/jwt/responses.go
@@ -1,5 +1,14 @@
 package jwtModel
 
-type JWTTokenResponse struct {
-	JWTToken
+type MessageResponse struct {
+	Message string `json:"message"`
+}
+
+type JWTTokenAliveResponse struct {
+	Alive bool `json:"alive" default:"true"`
+}
+
+type JwtTokenRefreshResponse struct {
+	Username string `json:"username"`
+	Token    string `json:"token"`
 }
