# internal/handlers/core/router.go
@@ -9,7 +9,7 @@ func AddRouter(rg *gin.RouterGroup) {
 
 	r.POST("/sign-up", signUpHandler)
 	r.POST("/sign-in", signInHandler)
-	r.POST("/log-out", logOutHandler)
+	r.POST("/sign-out", signOutHandler)
 	r.GET("/users", getUsersHandler)
 }
 
@@ -25,7 +25,7 @@ func AddRouter(rg *gin.RouterGroup) {
 //	@Failure      400         {string}  string  "Bad Request"
 //	@Failure      500         {string}  string  "Internal Server Error"
 //
-// @Router       /v1/sign-up [post]
+// @Router       /v1/auth/sign-up [post]
 func signUpHandler(c *gin.Context) {
 	signUp(c)
 }
@@ -42,26 +42,26 @@ func signUpHandler(c *gin.Context) {
 //	@Failure      400         {string}  string  "Bad Request"
 //	@Failure      500         {string}  string  "Internal Server Error"
 //
-// @Router       /v1/sign-in [post]
+// @Router       /v1/auth/sign-in [post]
 func signInHandler(c *gin.Context) {
 	signIn(c)
 }
 
-// LogOut godoc
-// @Summary      Log Out core
-// @Description  route for logging out from veiia system
+// signOut godoc
+// @Summary      Sign Out core
+// @Description  route for signging out from veiia system
 // @Tags         core
 // @Accept       json
 // @Produce      json
-// @Param        message  body      coreModel.UserLogOutRequest  true  "User Info"
+// @Param        message  body      coreModel.UsersignOutRequest  true  "User Info"
 //
 //	@Success      200         {object}  coreModel.UserIdResponse
 //	@Failure      400         {string}  string  "Bad Request"
 //	@Failure      500         {string}  string  "Internal Server Error"
 //
-// @Router       /v1/log-out [post]
-func logOutHandler(c *gin.Context) {
-	logOut(c)
+// @Router       /v1/auth/sign-out [post]
+func signOutHandler(c *gin.Context) {
+	signOut(c)
 }
 
 // TEST godoc
@@ -75,7 +75,7 @@ func logOutHandler(c *gin.Context) {
 //	@Failure      400         {string}  string  "Bad Request"
 //	@Failure      500         {string}  string  "Internal Server Error"
 //
-// @Router       /v1/users [get]
+// @Router       /v1/auth/users [get]
 func getUsersHandler(c *gin.Context) {
 	getUsers(c)
 }
