# internal/handlers/jwt/actions.go
@@ -3,16 +3,36 @@ package jwt
 import (
 	"github.com/gin-gonic/gin"
 	jwtModel "github.com/syth0le/authorization-BE/internal/domain/jwt"
+	"github.com/syth0le/authorization-BE/pkg/utils"
+	"net/http"
 )
 
-func getJWTToken(c *gin.Context) {
-	c.JSON(200, jwtModel.JWTTokenResponse{JWTToken: jwtModel.JWTToken{Token: "324234"}})
-}
+func refreshJWTToken(c *gin.Context) {
+	var requestBody jwtModel.JWTTokenRequest
 
-func updateJWTToken(c *gin.Context) {
-	c.JSON(200, jwtModel.JWTTokenResponse{JWTToken: jwtModel.JWTToken{Token: "324234"}})
+	if err := c.ShouldBindJSON(&requestBody); err != nil {
+		utils.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+	}
+
+	c.JSON(http.StatusOK, requestBody)
 }
 
 func revokeJWTToken(c *gin.Context) {
-	c.JSON(200, jwtModel.JWTTokenResponse{JWTToken: jwtModel.JWTToken{Token: "324234"}})
+	var requestBody jwtModel.JWTTokenRequest
+
+	if err := c.ShouldBindJSON(&requestBody); err != nil {
+		utils.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+	}
+
+	c.JSON(http.StatusNoContent, jwtModel.MessageResponse{Message: "JWT Token was revoked"})
+}
+
+func isJWTTokenAlive(c *gin.Context) {
+	var requestBody jwtModel.JWTTokenRequest
+
+	if err := c.ShouldBindJSON(&requestBody); err != nil {
+		utils.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+	}
+
+	c.JSON(http.StatusOK, requestBody)
 }
